deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/part-of: stackblaze
